--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,3 +43,7 @@ footer {
  background:transparent url(../images/mfooter-ramp.jpg) center -1px no-repeat;
  max-width:737px;
 }
+
+code {
+  color: #586e75;
+}
